angular-requireJS-ocLazyLoad

--- a/4. myDemo2/app/index.html
+++ b/4. myDemo2/app/index.html
@@ -6,17 +6,17 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
     <meta content="telephone=no" name="format-detection"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
-    <title>angular + requireJS + ocLazyLoad + mobileNav</title>
+    <title>app</title>
     <script>
-//        document.write("<link rel='stylesheet' href='styles/common.css?v=" + new Date().getTime() + "'>");
+        document.write("<link rel='stylesheet' href='styles/common.css?v=" + new Date().getTime() + "'>");
         document.write("<link rel='stylesheet' href='styles/mobile-nav.css?v=" + new Date().getTime() + "'>");
         document.write("<link rel='stylesheet' href='styles/navbar.css?v=" + new Date().getTime() + "'>");
         document.write("<link rel='stylesheet' href='styles/loading.css?v=" + new Date().getTime() + "'>");
         document.write("<link rel='stylesheet' href='styles/icon.css?v=" + new Date().getTime() + "'>");
         document.write("<link rel='stylesheet' href='styles/modal.css?v=" + new Date().getTime() + "'>");
-//        document.write("<link rel='stylesheet' href='styles/tab.css?v=" + new Date().getTime() + "'>");
-//        document.write("<link rel='stylesheet' href='styles/swiper.3.2.0.min.css?v=" + new Date().getTime() + "'>");
-//        document.write("<link rel='stylesheet' href='styles/page.css?v=" + new Date().getTime() + "'>");
+        document.write("<link rel='stylesheet' href='styles/tab.css?v=" + new Date().getTime() + "'>");
+        document.write("<link rel='stylesheet' href='styles/swiper.3.2.0.min.css?v=" + new Date().getTime() + "'>");
+        document.write("<link rel='stylesheet' href='styles/page.css?v=" + new Date().getTime() + "'>");
     </script>
 </head>
 <body>
